  `exclude_patterns` to avoid reading autosummary rst templates in the
  templates directory.
* Custom domains should implement the new `Domain.resolve_any_xref`
  method to make the `any` role work properly.
* gettext builder: gettext doesn't emit uuid information to generated pot files
  by default. Please set ``True`` to `gettext_uuid` to emit uuid information.
* gettext builder: disable extracting/apply 'index' node by default. Please set
  'index' to :confval:`gettext_enables` to enable extracting index entries.

Features added
--------------

* Add support for Python 3.4.
* Add support for docutils 0.12
* Added ``sphinx.ext.napoleon`` extension for NumPy and Google style docstring
  support.
* Added support for parallel reading (parsing) of source files with the
  `sphinx-build -j` option.  Third-party extensions will need to be checked for
  compatibility and may need to be adapted if they store information in the
  build environment object.  See `env-merge-info`.
* Added the `any` role that can be used to find a cross-reference of
  *any* type in *any* domain.  Custom domains should implement the new
  `Domain.resolve_any_xref` method to make this work properly.
* Exception logs now contain the last 10 messages emitted by Sphinx.
* Added support for extension versions (a string returned by ``setup()``, these
  can be shown in the traceback log files).  Version requirements for extensions
  can be specified in projects using the new `needs_extensions` config
  value.
* Changing the default role within a document with the :dudir:`default-role`
  directive is now supported.
* PR#214: Added stemming support for 14 languages, so that the built-in document
  search can now handle these.  Thanks to Shibukawa Yoshiki.
* PR#296: numfig feature: Assign numbers to figures, tables and code-blocks.
  Thanks to Takeshi Komiya.
* PR#202: Allow "." and "~" prefixed references in ``:param:`` doc fields
  for Python.