@@ -16,6 +16,11 @@ from itertools import product
 from six import iteritems
 from six.moves import range, zip_longest
 
+try:
+    import Levenshtein
+    IS_SPEEDUP = True
+except ImportError:
+    IS_SPEEDUP = False
 
 # anything below that ratio is considered equal/changed
 VERSIONING_RATIO = 65
@@ -109,7 +114,11 @@ def get_ratio(old, new):
     """
     if not all([old, new]):
         return VERSIONING_RATIO
-    return levenshtein_distance(old, new) / (len(old) / 100.0)
+
+    if IS_SPEEDUP:
+        return Levenshtein.distance(old, new) / (len(old) / 100.0)
+    else:
+        return levenshtein_distance(old, new) / (len(old) / 100.0)
 
 
 def levenshtein_distance(a, b):
